[XForms] Fixed regression of upload, filename and mediatype. Bug 345865, r=doronr+allan